--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     </div>
     <div class="skill-card">
       <strong>JavaScript</strong>
-      <div class="level">Avançado</div>
+      <div class="level">Basico</div>
     </div>
     <div class="skill-card">
       <strong>Banco de Dados</strong>
-      <div class="level">Intermediário</div>
+      <div class="level">apredizado</div>
     </div>
     <div class="skill-card">
       <strong>C#</strong>
