--- a/index.html
+++ b/index.html
@@ -66,16 +66,12 @@
   <div class="formacao-container">
     <div class="formacao-card">
       <h3>Análise e Desenvolvimento de Sistemas</h3>
-      <p>Universidade XYZ — 2023 - Atual</p>
+      <p>Universidade PUC — 2025 -  2028  - Atual</p>
     </div>
     <div class="formacao-card">
-      <h3>Curso de HTML, CSS e JavaScript</h3>
-      <p>Plataforma ABC — 2024</p>
-    </div>
-    <div class="formacao-card">
-      <h3>Certificação em UX/UI Design</h3>
-      <p>Plataforma DEF — 2025</p>
-    </div>
+      <h3>Pacote office Essencial  </h3>
+      <p>Plataforma Udemy — 2024</p>
+  
   </div>
 </section>
 
