Atualização no index.html

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 <div class="contato-icons">
 <a href="mailto:jcwgmoreira@gmail.com" target="_blank">📧 E-mail</a>
 <a href="https://wa.me/5531985917348" target="_blank">💬 WhatsApp</a>
-<a href="https://www.linkedin.com/in/joaoweb/" target="_blank">🔗 LinkedIn</a>
-<a href="https://github.com/joaoweb" target="_blank">🐱 GitHub</a>
+<a href="https://www.linkedin.com/in/joao-de-cristo-werner-goncalves-moreira-a96b20376?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">🔗 LinkedIn</a>
+<a href="https://github.com/joaowernerg" target="_blank">🐱 GitHub</a>
 </div>
 </div>
 </section>
