--- a/index.html
+++ b/index.html
@@ -29,46 +29,63 @@
 </div>
 </header>
 
+<!-- SOBRE -->
 <section id="sobre" class="section">
 <h2>Sobre mim</h2>
-<p>Olá! Meu nome é <b>João Werner</b> e busco uma <b>oportunidade na área de TI</b>. Tenho conhecimentos em <b>HTML, CSS, JavaScript</b> e estou aprendendo <b>Banco de Dados e C#</b>. Sou dedicado, curioso e motivado a aprender continuamente, aplicando meus conhecimentos em projetos eficientes e inovadores.</p>
+<p>Olá! Meu nome é <b>João Werner</b> e busco uma <b>oportunidade na área de TI</b>. Tenho conhecimentos em <b>HTML, CSS, JavaScript</b> e atualmente estou me aprofundando em <b>Banco de Dados</b> e <b>C#</b>.  
+Sou uma pessoa <b>curiosa e dedicada</b>, sempre em busca de aprender algo novo e aplicar na prática. Tenho facilidade em aprender ferramentas rapidamente, gosto de resolver problemas e acredito que a tecnologia pode transformar a vida das pessoas.  
+Meu foco principal é atuar como <b>desenvolvedor Front-End</b>, mas também tenho grande interesse em expandir meus conhecimentos em <b>Back-End</b> e <b>Desenvolvimento Full Stack</b> futuramente.</p>
 </section>
 
+<!-- HABILIDADES -->
 <section id="habilidades" class="section">
 <h2>Habilidades</h2>
 <div class="skills-container">
-<div class="skill-card"><strong>HTML</strong><div class="level">Avançado</div></div>
-<div class="skill-card"><strong>CSS</strong><div class="level">Avançado</div></div>
-<div class="skill-card"><strong>JavaScript</strong><div class="level">Básico</div></div>
-<div class="skill-card"><strong>Banco de Dados</strong><div class="level">Aprendizado</div></div>
-<div class="skill-card"><strong>C#</strong><div class="level">Aprendizado</div></div>
+<div class="skill-card"><strong>HTML</strong><div class="level">Avançado</div><p>Experiência em criação de páginas semânticas, acessíveis e bem estruturadas.</p></div>
+<div class="skill-card"><strong>CSS</strong><div class="level">Avançado</div><p>Conhecimento em responsividade .</p></div>
+<div class="skill-card"><strong>JavaScript</strong><div class="level">Básico</div><p>lógica de programação, interatividade em sites.</p></div>
+<div class="skill-card"><strong>Banco de Dados</strong><div class="level">Aprendizado</div><p>Iniciando estudos em SQL, modelagem e integração com aplicações.</p></div>
+<div class="skill-card"><strong>C#</strong><div class="level">Aprendizado</div><p>Explorando conceitos logica</p></div>
 </div>
 </section>
 
+<!-- FORMAÇÃO -->
 <section id="formacao" class="section">
 <h2>Formação & Cursos</h2>
 <div class="formacao-container">
-<div class="formacao-card"><h3>Análise e Desenvolvimento de Sistemas</h3><p>PUC — 2025-2028</p></div>
-<div class="formacao-card"><h3>Pacote Office Essencial</h3><p>Udemy — 2024</p></div>
+<div class="formacao-card">
+<h3>Análise e Desenvolvimento de Sistemas</h3>
+<p><b>PUC</b> — 2025 a 2028</p>
+<p>Curso superior em andamento, com foco em programação, banco de dados e desenvolvimento de sistemas.</p>
 </div>
-</section>
+<div class="formacao-card">
+<h3>Pacote Office Essencial</h3>
+<p><b>Udemy</b> — 2024</p>
+<p>Curso de produtividade e organização com Word, Excel e PowerPoint.</p>
+</div>
 
+
+<!-- SOFT SKILLS -->
 <section id="softskills" class="section">
 <h2>Soft Skills & Interesses</h2>
 <div class="softskills-container">
-<span>💡 Criatividade</span>
-<span>🤝 Trabalho em equipe</span>
-<span>🕹️ Jogos e interfaces</span>
-<span>📚 Aprendizado contínuo</span>
-<span>🌐 Tecnologias web</span>
+<span>💡 Criatividade — Gosto de buscar soluções diferentes para problemas comuns.</span>
+<span>🤝 Trabalho em equipe — Valorizo colaboração e troca de ideias.</span>
+<span>🕹️ Jogos e interfaces — Interesse em gamificação e usabilidade.</span>
+<span>📚 Aprendizado contínuo — Sempre estudando novas linguagens e tecnologias.</span>
+<span>🌐 Tecnologias web — Fascínio por design responsivo e aplicações interativas.</span>
 </div>
 </section>
 
+<!-- OBJETIVOS -->
 <section id="objetivos" class="section">
 <h2>Objetivos</h2>
-<p>Meu objetivo é me tornar um desenvolvedor Front-End completo, criando aplicações web futuristas, interativas e funcionais, contribuindo para projetos que impactem positivamente os usuários.</p>
+<p>Meu principal objetivo é <b>me consolidar como Desenvolvedor Front-End</b>, trabalhando com <b>HTML, CSS, JavaScript e frameworks modernos</b>.  
+A médio prazo, pretendo expandir para o <b>Back-End</b>, com Node.js e bancos de dados relacionais.  
+Meu sonho é <b>atuar em projetos de impacto</b>, criando aplicações que facilitem a vida das pessoas, sempre priorizando <b>acessibilidade, performance e experiência do usuário</b>.</p>
 </section>
 
+<!-- CONTATO -->
 <section id="contato" class="section">
 <h2>Contato</h2>
 <div class="contato-container">
@@ -76,7 +93,7 @@
 <div class="contato-icons">
 <a href="mailto:jcwgmoreira@gmail.com" target="_blank">📧 E-mail</a>
 <a href="https://wa.me/5531985917348" target="_blank">💬 WhatsApp</a>
-<a href="https://www.linkedin.com/in/joao-de-cristo-werner-goncalves-moreira-a96b20376?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">🔗 LinkedIn</a>
+<a href="https://www.linkedin.com/in/joao-de-cristo-werner-goncalves-moreira-a96b20376" target="_blank">🔗 LinkedIn</a>
 <a href="https://github.com/joaowernerg" target="_blank">🐱 GitHub</a>
 </div>
 </div>
