--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </nav>
 <div class="hero">
 <h1>Olá, eu sou <span>João Werner</span></h1>
-<p>Desenvolvedor Front-End em formação, apaixonado por tecnologia e design futurista.</p>
+<p>Desenvolvedor Front-End em formação, apaixonado por tecnologia </p>
 <a href="#contato" class="btn">Entre em contato</a>
 </div>
 </header>
