--- a/index.html
+++ b/index.html
@@ -87,17 +87,26 @@ Meu sonho é <b>atuar em projetos de impacto</b>, criando aplicações que facil
 
 <!-- CONTATO -->
 <section id="contato" class="section">
-<h2>Contato</h2>
-<div class="contato-container">
-<p>Entre em contato via:</p>
-<div class="contato-icons">
-<a href="mailto:jcwgmoreira@gmail.com" target="_blank">📧 E-mail</a>
-<a href="https://wa.me/5531985917348" target="_blank">💬 WhatsApp</a>
-<a href="https://www.linkedin.com/in/joao-de-cristo-werner-goncalves-moreira-a96b20376" target="_blank">🔗 LinkedIn</a>
-<a href="https://github.com/joaowernerg" target="_blank">🐱 GitHub</a>
-</div>
-</div>
+  <h2>Contato</h2>
+  <div class="contato-container">
+    <p>Entre em contato pelos links abaixo:</p>
+    <ul class="contato-icons">
+      <li>
+        <a href="mailto:jcwgmoreira@gmail.com" target="_blank" rel="noopener noreferrer">📧 E-mail</a>
+      </li>
+      <li>
+        <a href="https://wa.me/5531985917348" target="_blank" rel="noopener noreferrer">💬 WhatsApp</a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/joao-de-cristo-werner-goncalves-moreira-a96b20376" target="_blank" rel="noopener noreferrer">🔗 LinkedIn</a>
+      </li>
+      <li>
+        <a href="https://github.com/joaowernerg" target="_blank" rel="noopener noreferrer">🐱 GitHub</a>
+      </li>
+    </ul>
+  </div>
 </section>
+
 
 <footer><p>© 2025 João Werner. Todos os direitos reservados.</p></footer>
 <script src="script.js"></script>
