Mensagem do commit explicando a alteração

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     <h2>Contato</h2>
     <ul class="contact-list">
       <li><a href="mailto:jcwgmoreira@gmail.com">📧 E-mail</a></li>
-      <li><a href="https://wa.me/5531985917348" target="_blank">💬 WhatsApp</a></li>
-      <li><a href="https://www.linkedin.com/in/joao-de-cristo-werner-goncalves-moreira-a96b20376" target="_blank">🔗 LinkedIn</a></li>
-      <li><a href="https://github.com/joaowernerg" target="_blank">🐱 GitHub</a></li>
+      <li><a href="https://wa.me/5531985917348" target="_blank" rel="noopener noreferrer">💬 WhatsApp</a></li>
+      <li><a href="https://www.linkedin.com/in/joao-de-cristo-werner-goncalves-moreira-a96b20376" target="_blank" rel="noopener noreferrer">🔗 LinkedIn</a></li>
+      <li><a href="https://github.com/joaowernerg" target="_blank" rel="noopener noreferrer">🐱 GitHub</a></li>
     </ul>
   </section>
 
