Adicionar  projeto Café Vintage

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="#formacao">Formação</a></li>
         <li><a href="#softskills">Soft Skills</a></li>
         <li><a href="#objetivos">Objetivos</a></li>
+        <li><a href="#projetos">Projetos</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
@@ -104,6 +105,16 @@
     <p>
       Meu principal objetivo é <b>me consolidar como Desenvolvedor Front-End</b>, trabalhando com <b>HTML, CSS, JavaScript e frameworks modernos</b>. A médio prazo, pretendo expandir para o <b>Back-End</b>, com Node.js e bancos de dados relacionais. Meu sonho é <b>atuar em projetos de impacto</b>, sempre priorizando <b>acessibilidade, performance e experiência do usuário</b>.
     </p>
+  </section>
+
+  <!-- PROJETOS -->
+  <section id="projetos" class="section light">
+    <h2>Projetos</h2>
+    <div class="project">
+      <h3>Café Vintage</h3>
+      <p>Site institucional para a cafeteria Café Vintage, com informações sobre o menu, avaliações e valores da marca.</p>
+      <a href="https://joaowernerg.github.io/cafeteria/" target="_blank" class="btn">Ver Projeto</a>
+    </div>
   </section>
 
   <!-- CONTATO -->
